@@ -3,12 +3,12 @@ package CommandHelper;
 # ************************************************************
 # Description   : Base class and factory for all command helpers.
 #
-#                 The get() method takes the basename of the provided
-#                 command, converts it to uppercase and adds 'Helper' to
-#                 the end.  If a module is found matching that name, it
-#                 will be used to assist the ProjectCreator in
-#                 determining which output files will be generated by the
-#                 command give the file name and command options.
+#                 The get() method converts the define custom type
+#                 provided to uppercase, removes the '_FILES' portion and
+#                 adds 'Helper' to the end.  If a module is found matching
+#                 that name, it will be used to assist the ProjectCreator
+#                 in determining which output files will be generated by
+#                 the command give the file name and command options.
 #
 # Author        : Chad Elliott
 # Create Date   : 6/30/2008
@@ -33,11 +33,11 @@ my %notfound;
 # ************************************************************
 
 sub get {
-  my $cmd = shift;
-  return undef if (!defined $cmd);
+  my $type = shift;
 
   ## Create the helper name
-  my $type = uc(basename($cmd)) . 'Helper';
+  my $type = uc($type);
+  $type =~ s/_FILES$/Helper/;
 
   ## Don't search the filesystem again if we didn't find one the first
   ## time we looked.
